<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.hellovega.zhimingdi.ui.activity.LoginActivity">



    <ImageView
        android:id="@+id/login_qq"
        android:src="@drawable/login_qq"
        android:layout_width="120dp"
        android:layout_height="100dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.065"
        android:layout_marginTop="16dp" />

    <TextView
        android:text="@string/login_QQ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/login_qq"
        android:id="@+id/textView" />



<ImageView
    android:id="@+id/login_wechat"
    android:src="@drawable/login_wechat"
    android:layout_width="120dp"
    android:layout_height="100dp"

    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintVertical_bias="0.114"
    android:layout_marginTop="8dp"
    app:layout_constraintTop_toBottomOf="@+id/textView" />

<TextView
    android:text="@string/login_WeChat"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    android:layout_marginTop="5dp"
    app:layout_constraintTop_toBottomOf="@+id/login_wechat"
    android:id="@+id/textView2" />




    <ImageView
        android:id="@+id/login_weibo"
        android:src="@drawable/login_weibo"
        android:layout_width="120dp"
        android:layout_height="100dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.322"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:text="@string/login_WeiBo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/login_weibo" />
</android.support.constraint.ConstraintLayout>
